takebishi/deploy/takebishi/manifests/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  labels:
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/warn: privileged
    security.openshift.io/scc.podSecurityLabelSync: "false"
  name: takebishi
