takebishi/deploy/takebishi/manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: dgw
  namespace: takebishi
spec:
  to:
    kind: Service
    name: dgw
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
